Fix chat timestamp overlap with buttons

--- a/stylesheets/custom.scss
+++ b/stylesheets/custom.scss
@@ -149,12 +149,12 @@ button {
     position: relative;
     padding: 7px;
     float: right;
-    background: rgba(32, 32, 32, 0.3);
+    background: rgb(188, 188, 188);
     margin: 10px 0 0 10px;
     cursor: pointer;
 
     &.blue {
-      background: rgba(0, 95, 255, 0.4);
+      background: rgb(157, 193, 251);
       box-shadow: 0 1px 5px rgba(0, 150, 255, 0.4);
     }
 
